# -

./: ARCHITECTURE.md  README.md
cognitive_architecture/config/: system_config.yaml
cognitive_architecture/documents/: example.txt
cognitive_architecture/src/: main.py
cognitive_architecture/src/core/: constants.py  formats.py  positions.py  uid_generator.py
cognitive_architecture/src/file_system/: cleaner.py  directory_manager.py  file_watcher.py
cognitive_architecture/src/instruction_system/: cursor_manager.py  executor.py
cognitive_architecture/src/system/: executor.py  monitor.py  parser.py  searcher.py
cognitive_architecture/src/uid_system/: query_processor.py
cognitive_architecture/system_root/documents/: example.txt
cognitive_architecture/system_root/documents/default/: example.txt
cognitive_architecture/system_root/documents/test/: search_test.txt
cognitive_architecture/system_root/instruction_system/cursors/: CURSOR_1767634558677_1_8847.cursor  CURSOR_1767634558683_2_8659.cursor  (+1 more)
cognitive_architecture/triggers/test_unit/: cursor.txt
engine/: logos.py  logosv2.py
knowledge-system/: LISENSE  pyproject.toml  readme.md  setup.py
knowledge-system/src/knowledge_system/: __init__.py  core.py  cursor_system.py  file_manager.py  logic_chain.py  search_system.py  uid_system.py
uid-relation-system/: basic_tests.rs  cargo.toml
uid-relation-system/benches/: basic_bench.rs
uid-relation-system/src/: lib.rs
uid-relation-system/src/core/: mod.rs  system_uids.rs  types.rs
uid-relation-system/src/error/: mod.rs
(+12 files in other folders)
